[gd_scene load_steps=2 format=2]

[ext_resource path="res://managers/SoundManager.gd" type="Script" id=2]

[node name="SoundManager" type="Spatial"]
script = ExtResource( 2 )

[node name="AttackSound" type="AudioStreamPlayer3D" parent="."]
unit_db = 5.0
bus = "SFX"

[node name="DamageSound" type="AudioStreamPlayer3D" parent="."]
unit_db = 5.0
bus = "SFX"

[node name="PainSound" type="AudioStreamPlayer3D" parent="."]
unit_db = 5.0
bus = "SFX"

[node name="WalkSound" type="AudioStreamPlayer3D" parent="."]
unit_db = 5.0
bus = "SFX"
